test/fail/api/string_to_i_under_min.lly
#[
ValueError: Value exceeds allowed range.
Traceback:
    File "[builtin]", from string::to_i
    File "string_to_i_under_min.lly", from __main__ at line 8
]#

"-9223372036854775809".to_i()
